# cowcast

./: .gitmodules  CMakeLists.txt
include/: file_reader.hpp  server.hpp
src/: file_reader.cpp  multicast_server.cpp  server.cpp  start_multicast_server.sh  test_multicast_server.cpp
